# TestQtQuick

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  TestQtQuick.pro  main.cpp  qml.qrc
qml/components/: CustomButton.qml  Page.qml
qml/transitions/: Main.qml  qmldir
